WIP: new commands

--- a/hyperapp/async/ui/object_commands_factory.yaml
+++ b/hyperapp/async/ui/object_commands_factory.yaml
@@ -4,6 +4,6 @@ import:
       - object_commands_d
 require:
   - lcs
-  - command_registry
+  - adapter_factory
 provide:
   - object_commands_factory
