--- a/hyperapp/server/test/test_resources/construct_resources_sample.expected.yaml
+++ b/hyperapp/server/test/test_resources/construct_resources_sample.expected.yaml
@@ -15,18 +15,18 @@ import:
 - legacy_type.impl.impl_association
 - legacy_type.impl.list_impl
 - legacy_type.impl.object_command_impl
-- legacy_type.lcs.lcs_association
+- legacy_type.lcs.lcs_set_resource_association
 - legacy_type.partial.partial
 associations:
 - _type: legacy_type.impl.impl_association
   piece_t: legacy_type.construct_resources_sample.sample
   implementation: sample_servant_impl
-- _type: legacy_type.lcs.lcs_association
+- _type: legacy_type.lcs.lcs_set_resource_association
   dir:
   - sample_servant_d
   - object_commands_d
   value: sample_servant_open_command
-- _type: legacy_type.lcs.lcs_association
+- _type: legacy_type.lcs.lcs_set_resource_association
   dir:
   - sample_servant_d
   - object_commands_d
