--- a/hyperapp/common/lcs.yaml
+++ b/hyperapp/common/lcs.yaml
@@ -4,6 +4,8 @@ import:
       - storage
       - lcs_association
       - lcs_set_association
+      - lcs_resource_association
+      - lcs_set_resource_association
   code:
     - async.ui.module
 require:
@@ -11,5 +13,6 @@ require:
   - aux_bundler_hooks
   - aux_unbundler_hooks
   - meta_registry
+  - python_object_creg
 provide:
   - lcs
