--- a/hyperapp/ui/qt/list_view.yaml
+++ b/hyperapp/ui/qt/list_view.yaml
@@ -4,14 +4,12 @@ import:
       - column_d
       - column_visible_d
       - column_list_d
-    list_object:
-      - list_object_d
+    list:
+      - list_d
     view:
       - view_d
     list_view:
       - list_view
-  code:
-    - async.ui.list_object
 require:
   - lcs
   - view_registry
