Global command list; move from ClientModule; construct

--- a/hyperapp/server/test/test_resources/construct_resources_sample.expected.yaml
+++ b/hyperapp/server/test/test_resources/construct_resources_sample.expected.yaml
@@ -9,15 +9,20 @@ import:
 - legacy_type.call.call
 - legacy_type.command.object_commands_d
 - legacy_type.construct_resources_sample.sample
+- legacy_type.construct_resources_sample.sample_d
 - legacy_type.construct_resources_sample.sample_servant_d
 - legacy_type.construct_resources_sample.sample_servant_open_d
 - legacy_type.construct_resources_sample.sample_servant_parent_d
+- legacy_type.global_command.global_command_association
+- legacy_type.impl.global_command_impl
 - legacy_type.impl.impl_association
 - legacy_type.impl.list_impl
 - legacy_type.impl.object_command_impl
 - legacy_type.lcs.lcs_set_resource_association
 - legacy_type.partial.partial
 associations:
+- _type: legacy_type.global_command.global_command_association
+  command: sample_command
 - _type: legacy_type.impl.impl_association
   piece_t: legacy_type.construct_resources_sample.sample
   implementation: sample_servant_impl
@@ -35,6 +40,21 @@ definitions:
   object_commands_d:
     _type: legacy_type.call.call
     function: legacy_type.command.object_commands_d
+  sample_attribute:
+    _type: legacy_type.attribute.attribute
+    object: legacy_module.construct_resources_sample
+    attr_name: sample
+  sample_command:
+    _type: legacy_type.impl.global_command_impl
+    function: sample_partial
+    dir: sample_d
+  sample_d:
+    _type: legacy_type.call.call
+    function: legacy_type.construct_resources_sample.sample_d
+  sample_partial:
+    _type: legacy_type.partial.partial
+    function: sample_attribute
+    params: {}
   sample_servant_attribute:
     _type: legacy_type.attribute.attribute
     object: legacy_module.construct_resources_sample
