--- a/hyperapp/resource_ctr/global.resources.yaml
+++ b/hyperapp/resource_ctr/global.resources.yaml
@@ -6,10 +6,12 @@ import:
   - legacy_service.resource_module_registry
   - legacy_type.attribute.attribute
   - legacy_type.call.call
+  - legacy_type.global_command.global_command_association
   - legacy_type.htest.list_t
   - legacy_type.htest.record_t
   - legacy_type.lcs.lcs_set_resource_association
   - legacy_type.impl.impl_association
+  - legacy_type.impl.global_command_impl
   - legacy_type.impl.list_impl
   - legacy_type.impl.object_command_impl
   - legacy_type.partial.partial
@@ -31,9 +33,11 @@ definitions:
       htypes.htest.record_t: legacy_type.htest.record_t
       htypes.htest.list_t: legacy_type.htest.list_t
       htypes.lcs.lcs_set_resource_association: legacy_type.lcs.lcs_set_resource_association
+      htypes.impl.impl_association: legacy_type.impl.impl_association
+      htypes.impl.global_command_impl: legacy_type.impl.global_command_impl
       htypes.impl.list_impl: legacy_type.impl.list_impl
       htypes.impl.object_command_impl: legacy_type.impl.object_command_impl
-      htypes.impl.impl_association: legacy_type.impl.impl_association
+      htypes.global_command.global_command_association: legacy_type.global_command.global_command_association
       services.mosaic: legacy_service.mosaic
       services.resource_type_producer: legacy_service.resource_type_producer
       services.resource_module_factory: legacy_service.resource_module_factory
