--- a/hyperapp/sample/sample_list.resources.yaml
+++ b/hyperapp/sample/sample_list.resources.yaml
@@ -10,15 +10,20 @@ import:
 - legacy_type.builtin.int
 - legacy_type.call.call
 - legacy_type.command.object_commands_d
+- legacy_type.global_command.global_command_association
+- legacy_type.impl.global_command_impl
 - legacy_type.impl.impl_association
 - legacy_type.impl.list_impl
 - legacy_type.impl.object_command_impl
 - legacy_type.lcs.lcs_set_resource_association
 - legacy_type.partial.partial
+- legacy_type.sample_list.open_sample_list_d
 - legacy_type.sample_list.sample_list
 - legacy_type.sample_list.sample_list_d
 - legacy_type.sample_list.sample_list_open_d
 associations:
+- _type: legacy_type.global_command.global_command_association
+  command: open_sample_list_command
 - _type: legacy_type.impl.impl_association
   piece_t: legacy_type.sample_list.sample_list
   implementation: sample_list_impl
@@ -31,6 +36,21 @@ definitions:
   object_commands_d:
     _type: legacy_type.call.call
     function: legacy_type.command.object_commands_d
+  open_sample_list_attribute:
+    _type: legacy_type.attribute.attribute
+    object: legacy_module.sample.sample_list
+    attr_name: open_sample_list
+  open_sample_list_command:
+    _type: legacy_type.impl.global_command_impl
+    function: open_sample_list_partial
+    dir: open_sample_list_d
+  open_sample_list_d:
+    _type: legacy_type.call.call
+    function: legacy_type.sample_list.open_sample_list_d
+  open_sample_list_partial:
+    _type: legacy_type.partial.partial
+    function: open_sample_list_attribute
+    params: {}
   sample_list_attribute:
     _type: legacy_type.attribute.attribute
     object: legacy_module.sample.sample_list
