--- a/hyperapp/client/command_list.resources.yaml
+++ b/hyperapp/client/command_list.resources.yaml
@@ -9,10 +9,15 @@ import:
 - legacy_type.call.call
 - legacy_type.command_list.global_command_list
 - legacy_type.command_list.global_command_list_d
+- legacy_type.command_list.open_global_command_list_d
+- legacy_type.global_command.global_command_association
+- legacy_type.impl.global_command_impl
 - legacy_type.impl.impl_association
 - legacy_type.impl.list_impl
 - legacy_type.partial.partial
 associations:
+- _type: legacy_type.global_command.global_command_association
+  command: open_global_command_list_command
 - _type: legacy_type.impl.impl_association
   piece_t: legacy_type.command_list.global_command_list
   implementation: global_command_list_impl
@@ -36,3 +41,18 @@ definitions:
     params:
       lcs: legacy_service.lcs
       global_command_list: legacy_service.global_command_list
+  open_global_command_list_attribute:
+    _type: legacy_type.attribute.attribute
+    object: legacy_module.client.command_list
+    attr_name: open_global_command_list
+  open_global_command_list_command:
+    _type: legacy_type.impl.global_command_impl
+    function: open_global_command_list_partial
+    dir: open_global_command_list_d
+  open_global_command_list_d:
+    _type: legacy_type.call.call
+    function: legacy_type.command_list.open_global_command_list_d
+  open_global_command_list_partial:
+    _type: legacy_type.partial.partial
+    function: open_global_command_list_attribute
+    params: {}
