--- a/hyperapp/client/command_list.resources.yaml
+++ b/hyperapp/client/command_list.resources.yaml
@@ -4,6 +4,7 @@ import:
 - legacy_module.client.command_list
 - legacy_service.global_command_list
 - legacy_service.lcs
+- legacy_service.python_object_creg
 - legacy_type.attribute.attribute
 - legacy_type.builtin.string
 - legacy_type.call.call
@@ -40,6 +41,7 @@ definitions:
     function: global_command_list_attribute
     params:
       lcs: legacy_service.lcs
+      python_object_creg: legacy_service.python_object_creg
       global_command_list: legacy_service.global_command_list
   open_global_command_list_attribute:
     _type: legacy_type.attribute.attribute
