--- a/hyperapp/client/command_list.resources.yaml
+++ b/hyperapp/client/command_list.resources.yaml
@@ -5,12 +5,16 @@ import:
 - legacy_service.global_command_list
 - legacy_service.lcs
 - legacy_service.python_object_creg
+- legacy_service.root_view
 - legacy_type.attribute.attribute
 - legacy_type.builtin.string
 - legacy_type.call.call
 - legacy_type.command_list.global_command_list
 - legacy_type.command_list.global_command_list_d
 - legacy_type.command_list.open_global_command_list_d
+- legacy_type.command_list.open_view_command_list_d
+- legacy_type.command_list.view_command_list
+- legacy_type.command_list.view_command_list_d
 - legacy_type.global_command.global_command_association
 - legacy_type.impl.global_command_impl
 - legacy_type.impl.impl_association
@@ -19,9 +23,14 @@ import:
 associations:
 - _type: legacy_type.global_command.global_command_association
   command: open_global_command_list_command
+- _type: legacy_type.global_command.global_command_association
+  command: open_view_command_list_command
 - _type: legacy_type.impl.impl_association
   piece_t: legacy_type.command_list.global_command_list
   implementation: global_command_list_impl
+- _type: legacy_type.impl.impl_association
+  piece_t: legacy_type.command_list.view_command_list
+  implementation: view_command_list_impl
 definitions:
   global_command_list_attribute:
     _type: legacy_type.attribute.attribute
@@ -58,3 +67,38 @@ definitions:
     _type: legacy_type.partial.partial
     function: open_global_command_list_attribute
     params: {}
+  open_view_command_list_attribute:
+    _type: legacy_type.attribute.attribute
+    object: legacy_module.client.command_list
+    attr_name: open_view_command_list
+  open_view_command_list_command:
+    _type: legacy_type.impl.global_command_impl
+    function: open_view_command_list_partial
+    dir: open_view_command_list_d
+  open_view_command_list_d:
+    _type: legacy_type.call.call
+    function: legacy_type.command_list.open_view_command_list_d
+  open_view_command_list_partial:
+    _type: legacy_type.partial.partial
+    function: open_view_command_list_attribute
+    params: {}
+  view_command_list_attribute:
+    _type: legacy_type.attribute.attribute
+    object: legacy_module.client.command_list
+    attr_name: ViewCommandList
+  view_command_list_d:
+    _type: legacy_type.call.call
+    function: legacy_type.command_list.view_command_list_d
+  view_command_list_impl:
+    _type: legacy_type.impl.list_impl
+    function: view_command_list_partial
+    key_attribute: name
+    key_t: legacy_type.builtin.string
+    dir: view_command_list_d
+  view_command_list_partial:
+    _type: legacy_type.partial.partial
+    function: view_command_list_attribute
+    params:
+      lcs: legacy_service.lcs
+      python_object_creg: legacy_service.python_object_creg
+      root_view: legacy_service.root_view
