--- a/hyperapp/client/command_list.resources.yaml
+++ b/hyperapp/client/command_list.resources.yaml
@@ -4,21 +4,28 @@ import:
 - legacy_module.client.command_list
 - legacy_service.global_command_list
 - legacy_service.lcs
+- legacy_service.mosaic
 - legacy_service.python_object_creg
 - legacy_service.root_view
+- legacy_service.web
 - legacy_type.attribute.attribute
 - legacy_type.builtin.string
 - legacy_type.call.call
+- legacy_type.command.object_commands_d
 - legacy_type.command_list.global_command_list
 - legacy_type.command_list.global_command_list_d
+- legacy_type.command_list.global_command_list_set_key_d
 - legacy_type.command_list.open_global_command_list_d
 - legacy_type.command_list.open_view_command_list_d
 - legacy_type.command_list.view_command_list
 - legacy_type.command_list.view_command_list_d
+- legacy_type.command_list.view_command_list_set_key_d
 - legacy_type.global_command.global_command_association
 - legacy_type.impl.global_command_impl
 - legacy_type.impl.impl_association
 - legacy_type.impl.list_impl
+- legacy_type.impl.object_command_impl
+- legacy_type.lcs.lcs_set_resource_association
 - legacy_type.partial.partial
 associations:
 - _type: legacy_type.global_command.global_command_association
@@ -31,6 +38,16 @@ associations:
 - _type: legacy_type.impl.impl_association
   piece_t: legacy_type.command_list.view_command_list
   implementation: view_command_list_impl
+- _type: legacy_type.lcs.lcs_set_resource_association
+  dir:
+  - global_command_list_d
+  - object_commands_d
+  value: global_command_list_set_key_command
+- _type: legacy_type.lcs.lcs_set_resource_association
+  dir:
+  - view_command_list_d
+  - object_commands_d
+  value: view_command_list_set_key_command
 definitions:
   global_command_list_attribute:
     _type: legacy_type.attribute.attribute
@@ -49,9 +66,23 @@ definitions:
     _type: legacy_type.partial.partial
     function: global_command_list_attribute
     params:
+      web: legacy_service.web
       lcs: legacy_service.lcs
       python_object_creg: legacy_service.python_object_creg
       global_command_list: legacy_service.global_command_list
+  global_command_list_set_key_command:
+    _type: legacy_type.impl.object_command_impl
+    object_ctr: global_command_list_partial
+    method: set_key
+    params:
+    - current_item
+    dir: global_command_list_set_key_d
+  global_command_list_set_key_d:
+    _type: legacy_type.call.call
+    function: legacy_type.command_list.global_command_list_set_key_d
+  object_commands_d:
+    _type: legacy_type.call.call
+    function: legacy_type.command.object_commands_d
   open_global_command_list_attribute:
     _type: legacy_type.attribute.attribute
     object: legacy_module.client.command_list
@@ -99,6 +130,17 @@ definitions:
     _type: legacy_type.partial.partial
     function: view_command_list_attribute
     params:
+      web: legacy_service.web
       lcs: legacy_service.lcs
-      python_object_creg: legacy_service.python_object_creg
+      mosaic: legacy_service.mosaic
       root_view: legacy_service.root_view
+  view_command_list_set_key_command:
+    _type: legacy_type.impl.object_command_impl
+    object_ctr: view_command_list_partial
+    method: set_key
+    params:
+    - current_item
+    dir: view_command_list_set_key_d
+  view_command_list_set_key_d:
+    _type: legacy_type.call.call
+    function: legacy_type.command_list.view_command_list_set_key_d
