--- a/hyperapp/client/command_list.resources.yaml
+++ b/hyperapp/client/command_list.resources.yaml
@@ -79,6 +79,7 @@ definitions:
     function: global_command_list_attribute
     params:
       web: legacy_service.web
+      mosaic: legacy_service.mosaic
       lcs: legacy_service.lcs
       python_object_creg: legacy_service.python_object_creg
       global_command_list: legacy_service.global_command_list
