--- a/hyperapp/sample/sample_list.resources.yaml
+++ b/hyperapp/sample/sample_list.resources.yaml
@@ -13,7 +13,7 @@ import:
 - legacy_type.global_command.global_command_association
 - legacy_type.impl.global_command_impl
 - legacy_type.impl.impl_association
-- legacy_type.impl.list_impl
+- legacy_type.impl.list_spec
 - legacy_type.impl.object_command_impl
 - legacy_type.lcs.lcs_set_resource_association
 - legacy_type.partial.partial
@@ -26,7 +26,8 @@ associations:
   command: open_sample_list_command
 - _type: legacy_type.impl.impl_association
   piece_t: legacy_type.sample_list.sample_list
-  implementation: sample_list_impl
+  ctr_fn: sample_list_partial
+  spec: sample_list_spec
 - _type: legacy_type.lcs.lcs_set_resource_association
   dir:
   - sample_list_d
@@ -58,12 +59,6 @@ definitions:
   sample_list_d:
     _type: legacy_type.call.call
     function: legacy_type.sample_list.sample_list_d
-  sample_list_impl:
-    _type: legacy_type.impl.list_impl
-    function: sample_list_partial
-    key_attribute: key
-    key_t: legacy_type.builtin.int
-    dir: sample_list_d
   sample_list_open_command:
     _type: legacy_type.impl.object_command_impl
     object_ctr: sample_list_partial
@@ -82,3 +77,8 @@ definitions:
       web: legacy_service.web
       peer_registry: legacy_service.peer_registry
       rpc_call_factory: legacy_service.rpc_call_factory
+  sample_list_spec:
+    _type: legacy_type.impl.list_spec
+    key_attribute: key
+    key_t: legacy_type.builtin.int
+    dir: sample_list_d
