--- a/hyperapp/ui/string_adapter.yaml
+++ b/hyperapp/ui/string_adapter.yaml
@@ -3,7 +3,7 @@ import:
     text:
       - text_d
     impl:
-      - string_impl
+      - string_spec
 require:
   - python_object_creg
   - impl_registry
