Rename type object_command_impl -> method_command_impl

--- a/hyperapp/resource_ctr/global.resources.yaml
+++ b/hyperapp/resource_ctr/global.resources.yaml
@@ -13,7 +13,7 @@ import:
   - legacy_type.impl.impl_association
   - legacy_type.impl.global_command_impl
   - legacy_type.impl.list_spec
-  - legacy_type.impl.object_command_impl
+  - legacy_type.impl.method_command_impl
   - legacy_type.partial.partial
   - legacy_type.piece_ref.piece_ref
   - legacy_type.python_module.python_module
@@ -36,7 +36,7 @@ definitions:
       htypes.impl.impl_association: legacy_type.impl.impl_association
       htypes.impl.global_command_impl: legacy_type.impl.global_command_impl
       htypes.impl.list_spec: legacy_type.impl.list_spec
-      htypes.impl.object_command_impl: legacy_type.impl.object_command_impl
+      htypes.impl.method_command_impl: legacy_type.impl.method_command_impl
       htypes.global_command.global_command_association: legacy_type.global_command.global_command_association
       services.mosaic: legacy_service.mosaic
       services.resource_type_producer: legacy_service.resource_type_producer
