--- a/hyperapp/client/command_list.resources.yaml
+++ b/hyperapp/client/command_list.resources.yaml
@@ -26,7 +26,7 @@ import:
 - legacy_type.impl.global_command_impl
 - legacy_type.impl.impl_association
 - legacy_type.impl.list_spec
-- legacy_type.impl.object_command_impl
+- legacy_type.impl.method_command_impl
 - legacy_type.lcs.lcs_set_resource_association
 - legacy_type.partial.partial
 associations:
@@ -80,7 +80,7 @@ definitions:
       python_object_creg: legacy_service.python_object_creg
       global_command_list: legacy_service.global_command_list
   global_command_list_set_key_command:
-    _type: legacy_type.impl.object_command_impl
+    _type: legacy_type.impl.method_command_impl
     object_ctr: global_command_list_partial
     method: set_key
     params:
@@ -90,7 +90,7 @@ definitions:
     _type: legacy_type.call.call
     function: legacy_type.command_list.global_command_list_set_key_d
   global_command_list_set_key_escape_command:
-    _type: legacy_type.impl.object_command_impl
+    _type: legacy_type.impl.method_command_impl
     object_ctr: global_command_list_partial
     method: set_key_escape
     params:
@@ -153,7 +153,7 @@ definitions:
       mosaic: legacy_service.mosaic
       root_view: legacy_service.root_view
   view_command_list_set_key_command:
-    _type: legacy_type.impl.object_command_impl
+    _type: legacy_type.impl.method_command_impl
     object_ctr: view_command_list_partial
     method: set_key
     params:
@@ -163,7 +163,7 @@ definitions:
     _type: legacy_type.call.call
     function: legacy_type.command_list.view_command_list_set_key_d
   view_command_list_set_key_escape_command:
-    _type: legacy_type.impl.object_command_impl
+    _type: legacy_type.impl.method_command_impl
     object_ctr: view_command_list_partial
     method: set_key_escape
     params:
