Move from htest to separate construct_resources module

--- a/hyperapp/command_line/construct_resources.resources.yaml
+++ b/hyperapp/command_line/construct_resources.resources.yaml
@@ -2,15 +2,18 @@ import:
 - legacy_service.hyperapp_dir
 - legacy_type.attribute.attribute
 - legacy_type.python_module.python_module
-- server.htest.htest
+- guesser.construct_resources.construct_resources
+
 definitions:
+
   construct_resources_module:
     _type: legacy_type.python_module.python_module
     module_name: construct_resources
     file_name: construct_resources.dyn.py
     import_list:
-      services.htest: server.htest.htest
+      services.construct_resources: guesser.construct_resources.construct_resources
       services.hyperapp_dir: legacy_service.hyperapp_dir
+
   construct_resources:
     _type: legacy_type.attribute.attribute
     object: construct_resources_module
