--- a/hyperapp/guesser/auto_importer.resources.yaml
+++ b/hyperapp/guesser/auto_importer.resources.yaml
@@ -1,5 +1,7 @@
 import:
-  - legacy_service.module_registry
+  - legacy_service.local_modules
+  - legacy_service.python_object_creg
+  - legacy_service.resource_module_registry
   - legacy_service.services
   - legacy_service.type_module_loader
   - legacy_service.types
@@ -17,6 +19,8 @@ definitions:
     file_name: auto_importer.dyn.py
     import_list:
       htypes.auto_importer.import_rec: legacy_type.auto_importer.import_rec
+      services.python_object_creg: legacy_service.python_object_creg
+      services.resource_module_registry: legacy_service.resource_module_registry
 
   auto_importer_ctr:
     _type: legacy_type.attribute.attribute
@@ -30,7 +34,7 @@ definitions:
       services: legacy_service.services
       types: legacy_service.types
       type_module_loader: legacy_service.type_module_loader
-      module_registry: legacy_service.module_registry
+      local_modules: legacy_service.local_modules
 
   auto_importer:
     _type: legacy_type.call.call
