--- a/hyperapp/server/htest.resources.yaml
+++ b/hyperapp/server/htest.resources.yaml
@@ -16,7 +16,7 @@ import:
   - legacy_type.piece_ref.piece_ref
   - server.htest_runner.runner_method_collect_attributes
   - server.htest_runner.get_resource_type
-  - resource_ctr.global.construct_global
+  - guesser.global.construct_global
 
 definitions:
 
@@ -73,7 +73,7 @@ definitions:
       runner_signal_queue: runner_signal_queue
       runner_is_ready_fn_ref: runner_is_ready_fn_ref
       runner_method_collect_attributes_ref: runner_method_collect_attributes_ref
-      construct_global: resource_ctr.global.construct_global
+      construct_global: guesser.global.construct_global
 
   htest:
     _type: legacy_type.call.call
